adding missing language files

--- a/include/language/it_it.manifest.xml
+++ b/include/language/it_it.manifest.xml
@@ -20,14 +20,14 @@
  ********************************************************************************
  *  Language     : Italian it_it
  *  Version      : 5.4.0
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.4.0
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.4.0RC
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.3.0GA
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.3.0RC
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.2.1
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.1.0
- *  Author       : Joe Bordes JPL TSolucio. Rafael Soler. 5.0.4
- *  Author       : Joe Bordes JPL TSolucio, S. L. 5.0.3
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
+ *  Author       : Eri Matraku AT Consulting
  ********************************************************************************
 ]]></inline>
   </license>
