chore(htmlpurifier) update to v4.8.0

--- a/include/htmlpurifier/NEWS
+++ b/include/htmlpurifier/NEWS
@@ -9,9 +9,19 @@ NEWS ( CHANGELOG and HISTORY )                                     HTMLPurifier
     . Internal change
 ==========================
 
-4.8.0, unknown release date
+4.8.0, released 2016-07-16
+# By default, when a link has a target attribute associated
+  with it, we now also add rel="noreferrer" in order to
+  prevent the new window from being able to overwrite
+  the original frame.  To disable this protection,
+  set %HTML.TargetNoreferrer to FALSE.
 ! Full PHP 7 compatibility, the test suite is ALL GO.
 ! %CSS.AllowDuplicates permits duplicate CSS properties.
+! Support for 'tel' URIs.
+! Partial support for 'border-radius' properties when %CSS.AllowProprietary is true.
+  The slash syntax, i.e., 'border-radius: 2em 1em 4em / 0.5em 3em' is not
+  yet supported.
+! %Attr.ID.HTML5 turns on HTML5-style ID handling.
 - alt truncation could result in malformed UTF-8 sequence. Don't
   truncate.  Thanks Brandon Farber for reporting.
 - Linkify regex is smarter, based off of Gruber's regex.
@@ -27,6 +37,8 @@ NEWS ( CHANGELOG and HISTORY )                                     HTMLPurifier
 - Don't match for <body> inside comments with
   %Core.ConvertDocumentToFragment. (#67)
 - SafeObject is now less case sensitive. (#57)
+- AutoFormat.RemoveEmpty.Predicate now correctly renders in
+  web form. (#85)
 
 4.7.0, released 2015-08-04
 # opacity is now considered a "tricky" CSS property rather than a
